--- a/LamGC.AES_XTS.Tests/LamGC.AES_XTS.Tests.csproj
+++ b/LamGC.AES_XTS.Tests/LamGC.AES_XTS.Tests.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
+    <TargetFrameworks>net6.0;net7.0;net8.0;net9.0;net10.0</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <IsPackable>false</IsPackable>
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\LamGC.BouncyCastle.AES_XTS\LamGC.BouncyCastle.AES_XTS.csproj" />
+    <ProjectReference Include="..\LamGC.AES_XTS\LamGC.AES_XTS.csproj" />
   </ItemGroup>
 
   <ItemGroup>
